# lazyfoo_tutorial

./: .gitignore  CMakeLists.txt  main.c  main.h
src/: Dot.c  Dot.h  LButton.c  LButton.h  LTexture.c  LTexture.h  LTimer.c  LTimer.h  globals.h  main.c  main.h
